Updating the way RollupSObjectUpdater defers updating all parent records if a rollup is in the midst of timing out. This means that a rollup the starts to time out will still attempt to update the parents it has already processed prior to finishing its own deferral. In some edge case with a batch full recalc, the combination of a particular batch deferring itself as a queueable in conjunction with the parents already processed having mistakenly also being deferred to a queueable was causing the error System.LimitException: Too many queueable jobs added to the queue: 2

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Prevents executeBatch call for deferred rollups when full batch recalculation is already in progress",
-            "versionNumber": "1.5.41.0",
+            "versionName": "Properly prevent second queueable from firing when an update should be synchronous",
+            "versionNumber": "1.5.42.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
