Incremental improvements again being made to full recalcs - this time by ensuring stateful variables are actually being populated correctly when a full recalc is batched

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Logging granularity updates",
-            "versionNumber": "1.5.44.0",
+            "versionName": "Continuing to chip away on the performance and functionality with full recalcs",
+            "versionNumber": "1.5.45.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -99,13 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.33-0": "04t6g000007zLvtAAE",
-        "apex-rollup@1.5.34-0": "04t6g000007zLxGAAU",
-        "apex-rollup@1.5.35-0": "04t6g000007zM2bAAE",
-        "apex-rollup@1.5.36-0": "04t6g000007zM78AAE",
-        "apex-rollup@1.5.37-0": "04t6g000007zMCdAAM",
-        "apex-rollup@1.5.38-0": "04t6g000008fjOcAAI",
-        "apex-rollup@1.5.39-0": "04t6g000008fjSFAAY",
         "apex-rollup@1.5.40-0": "04t6g000008fjSUAAY",
         "apex-rollup@1.5.41-0": "04t6g000008fjSyAAI",
         "apex-rollup@1.5.42-0": "04t6g000008fjThAAI",
