--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "TODO",
+            "versionName": "Continued full recalc refactoring, fixing issue where TriggerOperation enum could be improperly reset by downstream Flows",
             "versionNumber": "1.5.46.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
@@ -68,11 +68,11 @@
             "package": "Apex Rollup - Extra Code Coverage",
             "versionDescription": "This plugin adds code coverage for Apex Rollup if you need additional code coverage for the base package",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.14.0",
+            "versionNumber": "0.0.15.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.27-0"
+                    "package": "apex-rollup@1.5.46-0"
                 }
             ]
         },
@@ -89,8 +89,8 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.13-0": "04t6g000008SkvLAAS",
         "Apex Rollup - Extra Code Coverage@0.0.14-0": "04t6g000008b0i4AAA",
+        "Apex Rollup - Extra Code Coverage@0.0.15-0": "04t6g000008fjZaAAI",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -104,6 +104,7 @@
         "apex-rollup@1.5.42-0": "04t6g000008fjThAAI",
         "apex-rollup@1.5.43-0": "04t6g000008fjW7AAI",
         "apex-rollup@1.5.44-0": "04t6g000008fjXeAAI",
-        "apex-rollup@1.5.45-0": "04t6g000008fjY8AAI"
+        "apex-rollup@1.5.45-0": "04t6g000008fjY8AAI",
+        "apex-rollup@1.5.46-0": "04t6g000008fjZVAAY"
     }
 }
