Fixes min integer issue

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Continued full recalc refactoring, fixing issue where TriggerOperation enum could be improperly reset by downstream Flows",
-            "versionNumber": "1.5.46.0",
+            "versionName": "Fixes min int value setting",
+            "versionNumber": "1.5.47.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -99,9 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.40-0": "04t6g000008fjSUAAY",
-        "apex-rollup@1.5.41-0": "04t6g000008fjSyAAI",
-        "apex-rollup@1.5.42-0": "04t6g000008fjThAAI",
         "apex-rollup@1.5.43-0": "04t6g000008fjW7AAI",
         "apex-rollup@1.5.44-0": "04t6g000008fjXeAAI",
         "apex-rollup@1.5.45-0": "04t6g000008fjY8AAI",
