Updating group by rollups with support for tables

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -91,7 +91,7 @@
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "Apex Rollup - Extra Code Coverage@0.0.14-0": "04t6g000008b0i4AAA",
         "Apex Rollup - Extra Code Coverage@0.0.15-0": "04t6g000008fjZaAAI",
-        "Apex Rollup - Extra Code Coverage@0.0.16-0": "04t6g000008fjdIAAQ",
+        "Apex Rollup - Extra Code Coverage@0.0.16-0": "04t6g000008fje1AAA",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -103,6 +103,6 @@
         "apex-rollup@1.5.47-0": "04t6g000008fjaYAAQ",
         "apex-rollup@1.5.48-0": "04t6g000008fjcPAAQ",
         "apex-rollup@1.5.49-0": "04t6g000008fjcZAAQ",
-        "apex-rollup@1.5.50-0": "04t6g000008fjdNAAQ"
+        "apex-rollup@1.5.50-0": "04t6g000008fjdwAAA"
     }
 }
