--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Spring 23 updates continued",
-            "versionNumber": "1.5.49.0",
+            "versionName": "Adding Group By capabilities to rollups",
+            "versionNumber": "1.5.50.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -68,11 +68,11 @@
             "package": "Apex Rollup - Extra Code Coverage",
             "versionDescription": "This plugin adds code coverage for Apex Rollup if you need additional code coverage for the base package",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.15.0",
+            "versionNumber": "0.0.16.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.46-0"
+                    "package": "apex-rollup@1.5.50-0"
                 }
             ]
         },
@@ -91,6 +91,7 @@
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "Apex Rollup - Extra Code Coverage@0.0.14-0": "04t6g000008b0i4AAA",
         "Apex Rollup - Extra Code Coverage@0.0.15-0": "04t6g000008fjZaAAI",
+        "Apex Rollup - Extra Code Coverage@0.0.16-0": "04t6g000008fje1AAA",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -99,12 +100,9 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.43-0": "04t6g000008fjW7AAI",
-        "apex-rollup@1.5.44-0": "04t6g000008fjXeAAI",
-        "apex-rollup@1.5.45-0": "04t6g000008fjY8AAI",
-        "apex-rollup@1.5.46-0": "04t6g000008fjZkAAI",
         "apex-rollup@1.5.47-0": "04t6g000008fjaYAAQ",
         "apex-rollup@1.5.48-0": "04t6g000008fjcPAAQ",
-        "apex-rollup@1.5.49-0": "04t6g000008fjcZAAQ"
+        "apex-rollup@1.5.49-0": "04t6g000008fjcZAAQ",
+        "apex-rollup@1.5.50-0": "04t6g000008fjeGAAQ"
     }
 }
