--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Multi-currency bugfix",
-            "versionNumber": "1.5.51.0",
+            "versionName": "ESLint upgrades",
+            "versionNumber": "1.5.52.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -99,9 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.47-0": "04t6g000008fjaYAAQ",
-        "apex-rollup@1.5.48-0": "04t6g000008fjcPAAQ",
-        "apex-rollup@1.5.49-0": "04t6g000008fjcZAAQ",
         "apex-rollup@1.5.50-0": "04t6g000008fjeGAAQ",
         "apex-rollup@1.5.51-0": "04t6g000008fjepAAA"
     }
