Adding extra tests and safety for rolling up multiple children types to one parent as part of the ongoing discussion in #417

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "ESLint upgrades, scanner upgrades, grandparent rollup bugfix",
-            "versionNumber": "1.5.52.0",
+            "versionName": "Add extra type safety in RollupCalculator when multiple children types are being rolled up to the same parent",
+            "versionNumber": "1.5.53.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
