Updating version name

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Add extra type safety when multiple children types are being rolled up to the same grandparent",
-            "versionNumber": "1.5.53.0",
+            "versionName": "Quality of life updates as far as how rollup queries are performed",
+            "versionNumber": "1.5.54.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
