Promoting RollupLogger visibility to global to allow namespaced package users to extend the class

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Quality of life updates as far as how rollup queries are performed",
+            "versionName": "Quality of life updates as far as how rollup queries are performed, updated RollupLogger to global visibility",
             "versionNumber": "1.5.54.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
