--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -4,5 +4,10 @@
   "country": "US",
   "language": "en_US",
   "features": ["MultiCurrency"],
-  "hasSampleData": true
+  "hasSampleData": true,
+  "settings": {
+    "deploymentSettings": {
+      "doesSkipAsyncApexValidation": true
+    }
+  }
 }
