Updating namespaced package version creation after it failed in last pipeline run [skip ci]

--- a/rollup-namespaced/sfdx-project.json
+++ b/rollup-namespaced/sfdx-project.json
@@ -21,36 +21,9 @@
     "sourceApiVersion": "56.0",
     "packageAliases": {
         "apex-rollup-namespaced": "0Ho6g000000PBMjCAO",
-        "apex-rollup-namespaced@1.0.0-0": "04t6g000008b0iOAAQ",
-        "apex-rollup-namespaced@1.0.1-0": "04t6g000008b0isAAA",
-        "apex-rollup-namespaced@1.0.2-0": "04t6g000008b0nKAAQ",
-        "apex-rollup-namespaced@1.0.3-0": "04t6g000007zLnoAAE",
-        "apex-rollup-namespaced@1.0.4-0": "04t6g000007zLpLAAU",
-        "apex-rollup-namespaced@1.0.5-0": "04t6g000007zLqEAAU",
-        "apex-rollup-namespaced@1.0.6-0": "04t6g000007zLvyAAE",
-        "apex-rollup-namespaced@1.0.7-0": "04t6g000007zLxLAAU",
-        "apex-rollup-namespaced@1.0.8-0": "04t6g000007zM2gAAE",
-        "apex-rollup-namespaced@1.0.9-0": "04t6g000007zM7DAAU",
-        "apex-rollup-namespaced@1.0.10-0": "04t6g000007zMCiAAM",
-        "apex-rollup-namespaced@1.0.11-0": "04t6g000008fjOhAAI",
-        "apex-rollup-namespaced@1.0.12-0": "04t6g000008fjSKAAY",
-        "apex-rollup-namespaced@1.0.13-0": "04t6g000008fjSZAAY",
-        "apex-rollup-namespaced@1.0.14-0": "04t6g000008fjT3AAI",
-        "apex-rollup-namespaced@1.0.15-0": "04t6g000008fjTmAAI",
-        "apex-rollup-namespaced@1.0.16-0": "04t6g000008fjWCAAY",
-        "apex-rollup-namespaced@1.0.17-0": "04t6g000008fjXjAAI",
-        "apex-rollup-namespaced@1.0.18-0": "04t6g000008fjYDAAY",
-        "apex-rollup-namespaced@1.0.19-0": "04t6g000008fjZpAAI",
-        "apex-rollup-namespaced@1.0.20-0": "04t6g000008fjadAAA",
-        "apex-rollup-namespaced@1.0.21-0": "04t6g000008fjcUAAQ",
-        "apex-rollup-namespaced@1.0.22-0": "04t6g000008fjceAAA",
-        "apex-rollup-namespaced@1.0.23-0": "04t6g000008fjeLAAQ",
-        "apex-rollup-namespaced@1.0.24-0": "04t6g000008fjeuAAA",
-        "apex-rollup-namespaced@1.0.25-0": "04t6g000008fjfdAAA",
-        "apex-rollup-namespaced@1.0.26-0": "04t6g000008fjg7AAA",
         "apex-rollup-namespaced@1.0.27-0": "04t6g000008fjheAAA",
         "apex-rollup-namespaced@1.0.28-0": "04t6g000008fjj1AAA",
         "apex-rollup-namespaced@1.0.29-0": "04t6g000008fjnsAAA",
-        "apex-rollup-namespaced@1.0.30-0": "04t6g000008fjoHAAQ"
+        "apex-rollup-namespaced@1.0.30-0": "04t6g000008fjogAAA"
     }
 }
