--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "ACM correctly includes all query fields for full recalcs, further optimizations",
-            "versionNumber": "1.5.56.0",
+            "versionName": "Adding marker interface for log objects to provide more information, added caboose concept to full batch recalcs",
+            "versionNumber": "1.5.57.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -105,6 +105,7 @@
         "apex-rollup@1.5.53-0": "04t6g000008fjg2AAA",
         "apex-rollup@1.5.54-0": "04t6g000008fjhZAAQ",
         "apex-rollup@1.5.55-0": "04t6g000008fjiwAAA",
-        "apex-rollup@1.5.56-0": "04t6g000008fjnnAAA"
+        "apex-rollup@1.5.56-0": "04t6g000008fjnnAAA",
+        "apex-rollup@1.5.57-0": "04t6g000008fjoMAAQ"
     }
 }
