--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Adding marker interface for log objects to provide more information, added caboose concept to full batch recalcs",
-            "versionNumber": "1.5.58.0",
+            "versionName": "Updates RollupEvaluator where clause to allow for improperly cased field names",
+            "versionNumber": "1.5.59.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -68,11 +68,11 @@
             "package": "Apex Rollup - Extra Code Coverage",
             "versionDescription": "This plugin adds code coverage for Apex Rollup if you need additional code coverage for the base package",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.16.0",
+            "versionNumber": "0.0.17.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.50-0"
+                    "package": "apex-rollup@1.5.59-0"
                 }
             ]
         },
@@ -91,6 +91,7 @@
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "Apex Rollup - Extra Code Coverage@0.0.15-0": "04t6g000008fjZaAAI",
         "Apex Rollup - Extra Code Coverage@0.0.16-0": "04t6g000008fje1AAA",
+        "Apex Rollup - Extra Code Coverage@0.0.17-0": "04t6g000008nzvnAAA",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -99,14 +100,10 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.50-0": "04t6g000008fjeGAAQ",
-        "apex-rollup@1.5.51-0": "04t6g000008fjepAAA",
-        "apex-rollup@1.5.52-0": "04t6g000008fjfYAAQ",
-        "apex-rollup@1.5.53-0": "04t6g000008fjg2AAA",
-        "apex-rollup@1.5.54-0": "04t6g000008fjhZAAQ",
         "apex-rollup@1.5.55-0": "04t6g000008fjiwAAA",
         "apex-rollup@1.5.56-0": "04t6g000008fjnnAAA",
         "apex-rollup@1.5.57-0": "04t6g000008fjoMAAQ",
-        "apex-rollup@1.5.58-0": "04t6g000008nzupAAA"
+        "apex-rollup@1.5.58-0": "04t6g000008nzupAAA",
+        "apex-rollup@1.5.59-0": "04t6g000008nzviAAA"
     }
 }
