Fixes #440 by including an internal, opt-in plugin, which updates .RollupSettings__c.BypassValidationRules__c so that validation rules can make exceptions for when Apex Rollup is the one updating records

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "TODO",
+            "versionName": "Adding RollupSettings__c.BypassValidationRules__c custom setting field to reference in validation rules",
             "versionNumber": "1.5.65.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
