--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Adding RollupSettings__c.BypassValidationRules__c custom setting field to reference in validation rules",
-            "versionNumber": "1.5.65.0",
+            "versionName": "Slight cleanup on RollupOrderBy__mdt transformations",
+            "versionNumber": "1.5.66.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -110,6 +110,7 @@
         "apex-rollup@1.5.62-0": "04t6g000008o0DQAAY",
         "apex-rollup@1.5.63-0": "04t6g000008o0DaAAI",
         "apex-rollup@1.5.64-0": "04t6g000008SnX0AAK",
-        "apex-rollup@1.5.65-0": "04t6g000008SnXoAAK"
+        "apex-rollup@1.5.65-0": "04t6g000008SnXoAAK",
+        "apex-rollup@1.5.66-0": "04t6g000008SneHAAS"
     }
 }
