--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Tech debt cleanup",
-            "versionNumber": "1.5.69.0",
+            "versionName": "Check org limits for AsyncApexJob execution prior to enqueueing/batching",
+            "versionNumber": "1.5.70.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -106,6 +106,7 @@
         "apex-rollup@1.5.66-0": "04t6g000008SneHAAS",
         "apex-rollup@1.5.67-0": "04t6g000008SneWAAS",
         "apex-rollup@1.5.68-0": "04t6g000008SnlYAAS",
-        "apex-rollup@1.5.69-0": "04t6g000008SnlnAAC"
+        "apex-rollup@1.5.69-0": "04t6g000008SnlnAAC",
+        "apex-rollup@1.5.70-0": "04t6g000008SnrXAAS"
     }
 }
