--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Check org limits for AsyncApexJob execution prior to enqueueing/batching",
-            "versionNumber": "1.5.70.0",
+            "versionName": "Added beta npsp migration script, removed Test.isRunningTest() from OrgLimits call that used to gack when packaging",
+            "versionNumber": "1.5.71.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -83,7 +83,7 @@
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "57.0",
+    "sourceApiVersion": "58.0",
     "packageAliases": {
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
@@ -100,10 +100,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.63-0": "04t6g000008o0DaAAI",
-        "apex-rollup@1.5.64-0": "04t6g000008SnX0AAK",
-        "apex-rollup@1.5.65-0": "04t6g000008SnXoAAK",
-        "apex-rollup@1.5.66-0": "04t6g000008SneHAAS",
         "apex-rollup@1.5.67-0": "04t6g000008SneWAAS",
         "apex-rollup@1.5.68-0": "04t6g000008SnlYAAS",
         "apex-rollup@1.5.69-0": "04t6g000008SnlnAAC",
