Enhancing visibility for Task/Event/User/etc... guidance for objects not supported by CMDT-driven rollups

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Updating stateful batch logic for MOST, FIRST, LAST, AVERAGE, and SOME calculations",
-            "versionNumber": "1.5.88.0",
+            "versionName": "README updates",
+            "versionNumber": "1.5.89.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
