Fixes #194 after a massive refactor of RollupEvaluator. Still a few functional TODOs to implement nested NOT statements (but I'm confident those weren't working previously, either). This is a breaking change for subscribers that were previously using the SQL syntax for NOT conditions in their where clauses. Massive thanks to @jongpie for keeping me company during this refactor!

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "README updates, fixes grandparent full recalc dereference error",
-            "versionNumber": "1.5.89.0",
+            "versionName": "Breaking change: where clause evaluation improvements",
+            "versionNumber": "1.6.0.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
