Finishing RollupEvaluator refactor

--- a/rollup-namespaced/sfdx-project.json
+++ b/rollup-namespaced/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup-namespaced",
             "path": "rollup-namespaced/source/rollup",
-            "versionName": "Updating stateful batch logic for MOST, FIRST, LAST, AVERAGE, and SOME calculations",
-            "versionNumber": "1.0.53.0",
+            "versionName": "Breaking change: where clause evaluation improvements",
+            "versionNumber": "1.1.0.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -23,6 +23,8 @@
         "apex-rollup-namespaced": "0Ho6g000000PBMjCAO",
         "apex-rollup-namespaced@1.0.51-0": "04t6g000008C71cAAC",
         "apex-rollup-namespaced@1.0.52-0": "04t6g000008C72GAAS",
-        "apex-rollup-namespaced@1.0.53-0": "04t6g000008C739AAC"
-    }
+        "apex-rollup-namespaced@1.0.53-0": "04t6g000008C739AAC",
+        "apex-rollup-namespaced@1.1.0-0": "04t6g000008C793AAC"
+    },
+    "restDeploy": "false"
 }
