--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -68,11 +68,11 @@
             "package": "Apex Rollup - Extra Code Coverage",
             "versionDescription": "This plugin adds code coverage for Apex Rollup if you need additional code coverage for the base package",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.19.0",
+            "versionNumber": "0.0.20.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.83-0"
+                    "package": "apex-rollup@1.6.0-0"
                 }
             ]
         },
@@ -91,6 +91,7 @@
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "Apex Rollup - Extra Code Coverage@0.0.18-0": "04t6g000008C6gXAAS",
         "Apex Rollup - Extra Code Coverage@0.0.19-0": "04t6g000008C6rRAAS",
+        "Apex Rollup - Extra Code Coverage@0.0.20-0": "04t6g000008C78yAAC",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -102,7 +103,8 @@
         "apex-rollup@1.5.86-0": "04t6g000008C71XAAS",
         "apex-rollup@1.5.87-0": "04t6g000008C72BAAS",
         "apex-rollup@1.5.88-0": "04t6g000008C734AAC",
-        "apex-rollup@1.5.89-0": "04t6g000008C77gAAC"
+        "apex-rollup@1.5.89-0": "04t6g000008C77gAAC",
+        "apex-rollup@1.6.0-0": "04t6g000008C78tAAC"
     },
     "restDeploy": "false"
 }
